# blockhole

./: .gitignore  .releaserc.json  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  pyproject.toml
.github/workflows/: ci.yml  sync-blacklist.yml
config/: allowlist.txt  permanent-blocklist.txt  policy.toml
data/: state.json
docs/: detection-policy.md  operations.md
reports/: latest.md
src/: analytics.rs  config.rs  error.rs  http.rs  lib.rs  lifecycle.rs  main.rs  models.rs  policy.rs  render.rs  state.rs  sync.rs  tests.rs
src/cf_ip_blacklist/: __init__.py  analytics.py  cli.py  config.py  errors.py  http.py  lifecycle.py  models.py  policy.py  rendering.py  state.py  sync.py
tests/: test_analytics.py  test_cli.py  test_http.py  test_policy.py  test_rendering.py  test_sync.py
