[package]
name = "blockhole"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ipnet = "2.11"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"
url = "2.5"

[dev-dependencies]
httpmock = "0.7"
proptest = "1.6"

[[bin]]
name = "blockhole"
path = "src/main.rs"
