[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-ip-blacklist"
version = "0.1.0"
description = "Auditable Cloudflare IP denylist automation for suspicious HTTP scanning activity."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
]

[project.scripts]
cf-ip-blacklist = "cf_ip_blacklist.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cf_ip_blacklist"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
